--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,21 @@
 
 # Log file
 *.log
+.idea/**
+out/*
+*.iml
+*.DS_Store
+
+# Default ignored files
+/shelf/
+/.idea/workspace.xml
+
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+/.gitignore
 
 # BlueJ files
 *.ctxt
